[project]
name = "s4tool-image"
description = "A custom node package for image processing in ComfyUI, for automating image processing within the ComfyUI workflow."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# S4Tool-Image ComfyUI Custom Node Requirements", "# Production quality dependencies - all packages are mandatory", "# Core dependencies", "torch>=2.0.0", "torchvision>=0.15.0", "Pillow>=8.0.0", "numpy>=1.21.0", "# Scientific computing and image processing", "scikit-learn>=1.0.0", "scikit-image>=0.19.0", "scipy>=1.8.0", "opencv-contrib-python>=4.5.0", "# AI model support (for RMBG-2.0 background removal and SAM segmentation)", "transformers>=4.20.0", "huggingface_hub>=0.15.0", "safetensors>=0.3.0", "# SAM (Segment Anything Model) support", "segment_anything", "timm", "addict", "# SAM2 (Segment Anything Model 2) support", "pyyaml>=6.0"]

[project.urls]
Repository = "https://github.com/S4MUEL-404/ComfyUI-S4Tool-Image"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/S4MUEL-404/ComfyUI-S4Tool-Image/wiki"
"Bug Tracker" = "https://github.com/S4MUEL-404/ComfyUI-S4Tool-Image/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-S4Tool-Image"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

